test/valid/54483_hello_world/hello_world.mag
-- Author: 54483, Pedro Barata

-- Prints a string literal

fun main (_) : Unit -> Unit =
  print("hello world")
